objects/ModuleInverterJunction__c.object
<CustomObject>
    <description>This object stores an Inverter/Module junction configuration to link a module configuration and inverter configuration. 
Each will store a lookup to Monitoring configuration and Inverter configuration. This is being used in Cash ordering and Lease/Loan.
Release WW 22 - 2016</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship with Inverter
Release WW22 - 2016</description>
        <label>Inverter Configuration</label>
        <referenceTo>Inverter_Configuration__c</referenceTo>
        <relationshipLabel>ModuleInverterJunctions</relationshipLabel>
        <relationshipName>MasterInverterJuntions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inverter_Name__c</fullName>
        <description>this contains the Inverter Name</description>
        <formula>Inverter_Configuration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship to Module.- Inverters are children of Module.
Release WW22 - 2016</description>
        <label>Module Configuration</label>
        <referenceTo>Module_Configuration__c</referenceTo>
        <relationshipLabel>ModuleInverterJunctions</relationshipLabel>
        <relationshipName>ModuleInverterJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <description>this contains the module name</description>
        <formula>Module_Configuration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Name</label>
        <type>Text</type>
    </fields>
    <label>ModuleInverterJunction</label>
    <nameField>
        <displayFormat>MIJ-{00000}</displayFormat>
        <label>ModuleInverterJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ModuleInverterJunctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>